test/tests/stages/8_loops/valid/do_while_break_immediate.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CDoWhile: 
                TIdentifier: (null)
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CBreak: 
                  TIdentifier: (null)
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
